--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,17 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-<div class="app"></div>
+<div class="app">
+  <nav class="nav">
+  <div class="nav-left">
+    <a class="nav-item is-brand" href="#">Puppies</a>
+  </div>
+
+  <div class="nav-center">
+    <a class="nav-item" href="#">All Puppies</a>
+    <a class="nav-item" href="#">Add Puppy</a>
+  </div>
+</div>
   <script src="/app.js" charset="utf-8"></script>
 </body>
 </html>
